Edited the values (What We Believe In) in the about page

--- a/about.html
+++ b/about.html
@@ -38,16 +38,16 @@
 
         <div class="grid-container">
           <div class="col-1of3">
-            <div class="img-filler"></div>
             <h3>Uniqueness.</h3>
+            <p>Our styles are only run for 1 month, so you can be sure that you'll be one of a few lucky people to own your unique style.</p>
           </div>
           <div class="col-1of3">
-            <div class="img-filler"></div>
             <h3>Sustainability.</h3>
+            <p>Our t-shirts are made in Canada from a 100% bamboo tri-blend, totally sweatshop free. That's right, they're environmentally <em>and</em> socially conscious.</p>
           </div>
           <div class="col-1of3">
-            <div class="img-filler"></div>
             <h3>Great Design.</h3>
+            <p>Our shirts are designed by professional artists and graphic designers with energy and creativity to spare, who want to share our work. We love making t-shirts and being proud of what we wear.</p>
           </div>
         </div>
       </section>
