add images for the designers on about.html add source file for image source

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 
         <div class="grid-container more-below">
           <div class="col-1of3">
-            <div class="img-filler"></div>
+            <div ><img src="img/designer1.jpg" alt=" " class="img-filler"></div>
           </div>
           <div class="col-2of3">
             <h2>John Smith</h2>
@@ -67,7 +67,7 @@
 
         <div class="grid-container more-below">
           <div class="col-1of3">
-            <div class="img-filler"></div>
+            <div ><img src="img/designer2.jpeg" alt=" " class="img-filler"></div>
           </div>
           <div class="col-2of3">
             <h2>Joe Brown</h2>
@@ -77,7 +77,7 @@
 
         <div class="grid-container">
           <div class="col-1of3">
-            <div class="img-filler"></div>
+            <div ><img src="img/designer3.jpg" alt=" " class="img-filler"></div>
           </div>
           <div class="col-2of3">
             <h2>Andy Drew</h2>
