Added content to profiles in About page, centered text in main page and item listings, added address to footer of homepage

--- a/about.html
+++ b/about.html
@@ -57,31 +57,37 @@
 
         <div class="grid-container more-below">
           <div class="col-1of3">
-            <div ><img src="img/designer1.jpg" alt=" " class="img-filler"></div>
+            <img src="img/designer1.jpg" alt=" " class="img-team">
           </div>
           <div class="col-2of3">
-            <h2>John Smith</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h3 class="title-team">Justin Schurtz</h3>
+            <p><strong>CEO and Founder</strong></p>
+            <p>Justin is the driving force behind <em>Fit To A Tee</em> and the man who started it all. After graduating with a joint major in business and design from Simon Fraser University, he spent 6 years as a digital designer, working for companies such as Microsoft and SAP. He later decided that he wanted to start his own business, and founded <em>Fit To A Tee</em> in 2012. He continues to design styles every once in a while.</p>
+            <p>When he has free time, you can probably find him climbing trees or skiing up in Whistler, British Columbia.</p>
           </div>
         </div>
 
         <div class="grid-container more-below">
           <div class="col-1of3">
-            <div ><img src="img/designer2.jpeg" alt=" " class="img-filler"></div>
+            <img src="img/designer2.jpeg" alt=" " class="img-team">
           </div>
           <div class="col-2of3">
-            <h2>Joe Brown</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h3 class="title-team">Shirley Knott</h3>
+            <p><strong>Lead Designer</strong></p>
+            <p>Shirley's the creative mastermind behind many of <em>Fit To A Tee's</em> unique styles, and she's also responsible for connecting with great local artists who want to share their work as well. After graduating from the Emily Carr University of Art + Design, she worked at Ion Brand Design for 4 years before coming to <em>Fit To A Tee</em> in 2013.</p>
+            <p>When she's not working on rad new designs, Shirley loves reading Keats, smelling flowers, and playing the piano.</p>
           </div>
         </div>
 
         <div class="grid-container">
           <div class="col-1of3">
-            <div ><img src="img/designer3.jpg" alt=" " class="img-filler"></div>
+            <img src="img/designer3.jpg" alt=" " class="img-team">
           </div>
           <div class="col-2of3">
-            <h2>Andy Drew</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h3 class="title-team">Chris Anthemum</h3>
+            <p><strong>Prepress Lead</strong></p>
+            <p>Chris has a passion for taking the digital and making it real. He's worked at various print shops across the Lower Mainland including Made In Print and True North Screen Printing, and has taken his talents to <em>Fit To A Tee</em>. He's the real deal.</p>
+            <p>Chris also plays drums with his band National Anthemum, and enjoys long walks on the beach in the cold Vancouver rain.</p>
           </div>
         </div>
       </section>
