--- a/current-item.html
+++ b/current-item.html
@@ -34,13 +34,13 @@
           <h1>Bike T-Shirt</h1>
           <p class="product-date">Style Ends: December 2015</p>
           <p class="product-price">$29.99</p>
-          <p>This fun bike t-shirt is made from a 100% bamboo tri-blend, and available in red, black, and white. It's a unisex fit and can be machine-washed and dried without any trouble.</p>
+          <p>This fun bike t-shirt is made from a 100% bamboo tri-blend, and available in blue, black, and white. It's a unisex fit and can be machine-washed and dried without any trouble.</p>
           <form>
             <div class="container">
               <div class="container-item">
                 <label class="textfield-label" for="select-colour">Colour</label>
                 <select id="select-colour" class="textfield">
-                  <option value="red"></option>
+                  <option value="red">Blue</option>
                   <option value="black">Black</option>
                   <option value="white">White</option>
                 </select>
