--- a/home.html
+++ b/home.html
@@ -26,67 +26,104 @@
       </nav>
       <!-- NAVIGATION // -->
 
-      <h1>Vancouver-designed. One-of-a-kind.</h1>
+      <div class="homepage-content">
+        <h1>Vancouver-designed. One-of-a-kind.</h1>
 
-      <p>Discover unique, sustainable, and beautifully-designed t-shirts from Vancouver, British Columbia.</p>
+        <p>Discover unique, sustainable, and beautifully-designed t-shirts from Vancouver, British Columbia.</p>
 
-      <a class="button submit" href="about.html">More About Us</a>
+        <a class="button submit" href="about.html">More About Us</a>
 
-      <section id="current-styles" class="more-below">
-      <h2 class="subheading">Current Styles</h2>
+        <section id="current-styles" class="more-below">
+        <h2 class="subheading">Current Styles</h2>
 
-        <div class="grid-container">
-          <div class="col-1of3">
-            <div class="img-filler"></div>
+          <div class="container">
+            <figure class="product-listing container-item"><a href="current-item.html">
+              <img src="img/tshirt-bike.png" alt="T-shirt with a bike on the front. The bike has people standing on its seat.">
+              <figcaption class="product-info">
+                <p class="product-name">Bike T-Shirt</p>
+                <p class="product-price">$29.99</p>
+              </figcaption></a>
+            </figure>
+            <figure class="product-listing container-item"><a href="current-item.html">
+              <img src="img/tshirt-mountain.png" alt="T-shirt with two mountains on the front. The tall mountain is thinking about food.">
+              <figcaption class="product-info">
+                <p class="product-name">Mountain T-Shirt</p>
+                <p class="product-price">$29.99</p>
+              </figcaption></a>
+            </figure>
+            <figure class="product-listing container-item"><a href="current-item.html">
+              <img src="img/tshirt-picnic.png" alt="T-shirt with a picnic basket containing chicken, watermelon, and lemonade on the front.">
+              <figcaption class="product-info">
+                <p class="product-name">Picnic T-Shirt</p>
+                <p class="product-price">$29.99</p>
+              </figcaption></a>
+            </figure>
           </div>
-          <div class="col-1of3">
-            <div class="img-filler"></div>
-          </div>
-          <div class="col-1of3">
-            <div class="img-filler"></div>
-          </div>
-        </div>
-        <a class="button more-info" href="current-styles.html">More Current Styles</a>
-      </section>
+          <a class="button more-info" href="current-styles.html">More Current Styles</a>
+        </section>
 
-      <section id="past-styles" class="more-below">
-      <h2 class="subheading">Past Styles</h2>
+        <section id="past-styles" class="more-below">
+        <h2 class="subheading">Past Styles</h2>
 
-        <div class="grid-container">
-          <div class="col-1of3">
-            <div class="img-filler"></div>
+          <div class="container">
+            <figure class="product-listing container-item"><a href="past-item.html">
+              <img src="img/tshirt_box.png" alt="T-shirt with a gift box on the front. ">
+              <figcaption class="product-info">
+                <p class="product-name">Gift Box T-Shirt</p>
+                <p class="product-date">October 2015</p>
+                <p class="product-sold">Sold: 12 </p>
+              </figcaption></a>
+            </figure>
+            <figure class="product-listing container-item"><a href="past-item.html">
+              <img src="img/tshirt_balloon.png" alt="T-shirt with a ballon on the front. ">
+              <figcaption class="product-info">
+                <p class="product-name">Ballon T-Shirt</p>
+                <p class="product-date">October 2015</p>
+                <p class="product-sold">Sold: 12 </p>
+              </figcaption></a>
+            </figure>
+            <figure class="product-listing container-item"><a href="past-item.html">
+              <img src="img/tshirt_cake.png" alt="T-shirt with a cake on the front.">
+              <figcaption class="product-info">
+                <p class="product-name">Cake T-Shirt</p>
+                <p class="product-date">October 2015</p>
+                <p class="product-sold">Sold: 12 </p>
+              </figcaption></a>
+            </figure>
           </div>
-          <div class="col-1of3">
-            <div class="img-filler"></div>
-          </div>
-          <div class="col-1of3">
-            <div class="img-filler"></div>
-          </div>
-        </div>
-        <a class="button more-info" href="past-styles.html">More Past Styles</a>
-      </section>
+          <a class="button more-info" href="past-styles.html">More Past Styles</a>
+        </section>
 
-      <section id="updates">
-      <h2 class="subheading">Company Updates</h2>
+        <section id="updates">
+        <h2 class="subheading">Company Updates</h2>
 
-        <div class="grid-container">
-          <div class="col-1of3">
-            <div class="img-filler"></div>
+          <div class="grid-container">
+            <div class="col-1of3">
+              <div class="img-filler"></div>
+            </div>
+            <div class="col-1of3">
+              <div class="img-filler"></div>
+            </div>
+            <div class="col-1of3">
+              <div class="img-filler"></div>
+            </div>
           </div>
-          <div class="col-1of3">
-            <div class="img-filler"></div>
-          </div>
-          <div class="col-1of3">
-            <div class="img-filler"></div>
-          </div>
-        </div>
-        <a class="button more-info" href="about.html">More About Us</a>
-      </section>
+          <a class="button more-info" href="about.html">More About Us</a>
+        </section> 
+      </div>
 
       <footer>
         <img class="footer-image" src="img/logo-footer.png" alt="Fit To A Tee logomark, with a diagonally striped t-shirt inside a circle.">
-        <p>&copy;2015 Fit To A Tee<br/>
-          Brendan Lane and Shengting Hu</p>
+        <div class="vcard">
+          <p class="fn"><strong>&copy;2015 Fit To A Tee</strong></p>
+          <p class="adr">
+            <span class="street-address">125 Main Street</span><br/>
+            <span class="region">Vancouver, BC</span><br/>
+            <span class="postal-code">V9W 5O8</span>
+          </p>
+          <p class="tel">(604) 271 9202</p>
+          <p>Brendan Lane and Shengting Hu</p>
+        </div>
       </footer>
 
     </div>
