Cleaned up CSS, fixed grid system across all pages (grid layouts are all float-based, with Flexbox only being used for the items within a product-listing and cart-item)

--- a/checkout.html
+++ b/checkout.html
@@ -33,7 +33,7 @@
 
         <div class="cart-item more-below">
           <div class="cart-item-box">
-            <div class="placeholder-img-cart-item"></div>
+            <img class="img-cart-view" src="http://placehold.it/160x160">
             <dl class="container">
               <div class="container-item">
                 <dt>Colour</dt>
@@ -59,7 +59,7 @@
 
         <div class="cart-item more-below">
           <div class="cart-item-box">
-            <div class="placeholder-img-cart-item"></div>
+            <img class="img-cart-view" src="http://placehold.it/160x160">
             <dl class="container">
               <div class="container-item">
                 <dt>Colour</dt>
@@ -85,7 +85,7 @@
 
         <div class="cart-item more-below">
           <div class="cart-item-box">
-            <div class="placeholder-img-cart-item"></div>
+            <img class="img-cart-view" src="http://placehold.it/160x160">
             <dl class="container">
               <div class="container-item">
                 <dt>Colour</dt>
