--- a/review.html
+++ b/review.html
@@ -31,7 +31,7 @@
       <section id="review-order">
       <h2 class="subheading">Review Order</h2>
       <div class="grid-container more-below">
-        <div class="col-1of3">
+        <div class="col-1of3 more-below-small">
           <p>
             <strong>Bike T-Shirt (Red)</strong> <a class="url" href="current-item.html">Change</a><br/>
             $29.99</br>
@@ -57,7 +57,7 @@
             <span class="total"><strong>Total: $106.17</strong></span>
           </p>
         </div>
-        <div class="vcard col-1of3">
+        <div class="vcard col-1of3 more-below-small">
           <p><strong>Shipping Address</strong> <a class="url" href="checkout.html">Change</a></p>
           <p class="adr">
             <span class="fn">Joe Buyden</span><br/>
