Edited address on about page, and edited the footer on every page to include the full address

--- a/current-styles.html
+++ b/current-styles.html
@@ -95,8 +95,13 @@
 
       <footer>
         <img class="footer-image" src="img/logo-footer.png" alt="Fit To A Tee logomark, with a diagonally striped t-shirt inside a circle.">
-        <p>&copy;2015 Fit To A Tee<br/>
-          Brendan Lane and Shengting Hu</p>
+        <div class="vcard">
+          <p> <span class="fn"><strong>&copy;2015 Fit To A Tee</strong></span><br/>
+          <span class="adr"><span class="street-address">125 Main Street</span>, <span class="region">Vancouver, BC</span>, <span class="postal-code">V9W 5O8</span></span></p>
+          <p><span class="tel">(604) 271 9202</span><br/>
+          <spanp class="email"><a href="mailto:info@fittoatee.com">info@fittoatee.com</a></span></p>
+          <p>Brendan Lane and Shengting Hu</p>
+        </div>
       </footer>
         
     </div>
