--- a/home.html
+++ b/home.html
@@ -127,13 +127,10 @@
       <footer>
         <img class="footer-image" src="img/logo-footer.png" alt="Fit To A Tee logomark, with a diagonally striped t-shirt inside a circle.">
         <div class="vcard">
-          <p class="fn"><strong>&copy;2015 Fit To A Tee</strong></p>
-          <p class="adr">
-            <span class="street-address">125 Main Street</span><br/>
-            <span class="region">Vancouver, BC</span><br/>
-            <span class="postal-code">V9W 5O8</span>
-          </p>
-          <p class="tel">(604) 271 9202</p>
+          <p> <span class="fn"><strong>&copy;2015 Fit To A Tee</strong></span><br/>
+          <span class="adr"><span class="street-address">125 Main Street</span>, <span class="region">Vancouver, BC</span>, <span class="postal-code">V9W 5O8</span></span></p>
+          <p><span class="tel">(604) 271 9202</span><br/>
+          <spanp class="email"><a href="mailto:info@fittoatee.com">info@fittoatee.com</a></span></p>
           <p>Brendan Lane and Shengting Hu</p>
         </div>
       </footer>
