--- a/past-item.html
+++ b/past-item.html
@@ -39,20 +39,6 @@
         </div>
       </section>
 
-      <!-- <section>
-        <div class="large-product-image">
-            <div class="img-filler"></div>
-        </div>
-        <div class="large-product-infor">
-            
-            <h2>Bike T-Shirt</h2>
-            <h3>Style Ends: December 2015</h3>
-            <h3>Item Sold: 12</h3>
-      
-            <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</P>
-
-        </div> -->
-
       <section id="reviews">
         <div class="grid-container">
           <div class="col-2of3 more-below-small">
@@ -77,8 +63,13 @@
       </section>
       <footer>
         <img class="footer-image" src="img/logo-footer.png" alt="Fit To A Tee logomark, with a diagonally striped t-shirt inside a circle.">
-        <p>&copy;2015 Fit To A Tee<br/>
-          Brendan Lane and Shengting Hu</p>
+        <div class="vcard">
+          <p> <span class="fn"><strong>&copy;2015 Fit To A Tee</strong></span><br/>
+          <span class="adr"><span class="street-address">125 Main Street</span>, <span class="region">Vancouver, BC</span>, <span class="postal-code">V9W 5O8</span></span></p>
+          <p><span class="tel">(604) 271 9202</span><br/>
+          <spanp class="email"><a href="mailto:info@fittoatee.com">info@fittoatee.com</a></span></p>
+          <p>Brendan Lane and Shengting Hu</p>
+        </div>
       </footer>
     </div>
   </body>
