--- a/current-item.html
+++ b/current-item.html
@@ -67,41 +67,9 @@
               </div>
             </div>
             <a class="button submit" href="checkout.html">Add To Cart</a>
-            <!-- <input type="submit" class="button submit" value="Add To Cart"> -->
           </form>
         </div>
       </section>
-
-        <!-- <div class="large-product-image">
-            <div class="img-filler"></div>
-        </div>
-        <div class="large-product-infor">
-            
-            <h2>Bike T-Shirt</h2>
-            <h3>Style Ends: December 2015</h3>
-            <h3>Price: $24.99</h3>
-      
-            <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</P>
-
-
-            <form action="">
-              <div >
-                <label for = "red" ><input type="radio" class="radio-inline" name="color" value="Red" id="red" />Red</label>
-                <label for = "blue" ><input type="radio" class="radio-inline" name="color" value="Blue" id="blue" />Blue </label>
-                <label for = "green" ><input type="radio" class="radio-inline" name="color" value="Green" id="green" />Green </label>
-                <label for = "orange" ><input type="radio" class="radio-inline" name="color" value="Orange" id="orange" />Orange </label>
-              </div>
-
-              <div class="radio-size">
-                <input type="radio" class="radio-inline" name="size" value="S">S</input>
-                <input type="radio" class="radio-inline" name="size" value="M">M</input>
-                <input type="radio" class="radio-inline" name="size" value="L">L</input>
-                <input type="radio" class="radio-inline" name="size" value="XL">XL</input>
-              </div>
-
-                <input type="submit" class="button submit" value="Add to Cart">
-            </form>
-        </div> -->
 
       <section id="reviews">
         <div class="grid-container">
@@ -127,8 +95,13 @@
       </section>
       <footer>
         <img class="footer-image" src="img/logo-footer.png" alt="Fit To A Tee logomark, with a diagonally striped t-shirt inside a circle.">
-        <p>&copy;2015 Fit To A Tee<br/>
-          Brendan Lane and Shengting Hu</p>
+        <div class="vcard">
+          <p> <span class="fn"><strong>&copy;2015 Fit To A Tee</strong></span><br/>
+          <span class="adr"><span class="street-address">125 Main Street</span>, <span class="region">Vancouver, BC</span>, <span class="postal-code">V9W 5O8</span></span></p>
+          <p><span class="tel">(604) 271 9202</span><br/>
+          <spanp class="email"><a href="mailto:info@fittoatee.com">info@fittoatee.com</a></span></p>
+          <p>Brendan Lane and Shengting Hu</p>
+        </div>
       </footer>
 
     </div>
