--- a/past-item.html
+++ b/past-item.html
@@ -22,7 +22,7 @@
       <nav class="fixed-nav-bar">
         <a href="home.html"><img class="img-navbar" src="img/logo-navbar.png" alt="Fit to a Tee logo."></a>
         <ul>
-          <li><a class="button navlink" href="current-styles.html">Current Styles</li><li><a class="button navlink" href="past-styles.html">Past Styles</a></li><li><a class="button navlink" href="about.html">About</a></li><li><a class="button navlink checkout" href="checkout.html">Checkout (3)</a></li>
+          <li><a class="button navlink" href="current-styles.html">Current Styles</a></li><li><a class="button navlink" href="past-styles.html">Past Styles</a></li><li><a class="button navlink" href="about.html">About</a></li><li><a class="button navlink checkout" href="checkout.html">Checkout (3)</a></li>
         </ul>
       </nav>
       <!-- NAVIGATION // -->
@@ -47,12 +47,20 @@
           </div>
           <div class="col-1of3">
             <h2>Leave A Review</h2>
-            <p>All the fields are required, but don't worry! We won't publicly publish any of your information.</p>
+            <p>All the fields are required, but don't worry! We won't publish any of your information anywhere but here.</p>
             <form>
               <label class="textfield-label" for="input-name">Name</label>
               <input type="text" class="textfield" placeholder="Name" id="input-name">
               <label class="textfield-label" for="input-email">Email Address</label>
               <input type="text" class="textfield" placeholder="Email Address" id="input-email">
+              <label class="textfield-label" for="input-rating">Rating (Out of 5)</label>
+              <select id="select-quantity" class="textfield">
+                <option value="5">5</option>
+                <option value="4">4</option>
+                <option value="3">3</option>
+                <option value="2">2</option>
+                <option value="1">1</option>
+              </select>
               <label class="textfield-label" for="input-review">Leave A Review</label>
               <textarea class="textfield" id="input-review" placeholder="Review"></textarea>
               <input type="submit" class="button submit" value="Submit form">
