Edited dates to make content seem more believable. Added copy to the current-style and past-style pages in order to provide context. Added full reviews with proper dates to the current-item and past-item pages.

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 
       <h1>About Us</h1>
 
-      <p><em>Fit to a Tee</em> is a Vancouver-based t-shirt company that makes limited edition, short run, one of a kind t-shirts. We design unique styles which are only available for one month, so that everything stays nice and fresh. We want you to look great in a t-shirt that few other people can call their own, and we want you to feel great about wearing it.</p>
+      <p><em>Fit to a Tee</em> is a Vancouver-based t-shirt company that makes limited edition, short run, one of a kind t-shirts. We design unique styles which are <strong>only available for one month</strong>, so that everything stays nice and fresh. We want you to look great in a t-shirt that few other people can call their own, and we want you to feel great about wearing it.</p>
 
       <section id="values" class="more-below">
       <h2 class="subheading">What We Believe In</h2>
@@ -39,7 +39,7 @@
         <div class="grid-container">
           <div class="col-1of3">
             <h3>Uniqueness.</h3>
-            <p>Our styles are only run for 1 month, so you can be sure that you'll be one of a few lucky people to own your unique style.</p>
+            <p>Our styles are only run for one month, so you can be sure that you'll be one of a few lucky people to own your unique style.</p>
           </div>
           <div class="col-1of3">
             <h3>Sustainability.</h3>
