--- a/current-item.html
+++ b/current-item.html
@@ -32,7 +32,7 @@
         <div class="product-view more-below">
           <img src="img/tshirt-bike.png" alt="T-shirt with a bike on the front. The bike has people standing on its seat." class="img-product-view">
           <h1>Bike T-Shirt</h1>
-          <p class="product-date">Style Ends: December 2015</p>
+          <p class="product-date">This style only runs until October 31, 2015!</p>
           <p class="product-price">$29.99</p>
           <p>This fun bike t-shirt is made from a 100% bamboo tri-blend, and available in blue, black, and white. It's a unisex fit and can be machine-washed and dried without any trouble.</p>
           <form>
@@ -75,30 +75,30 @@
         <div class="grid-container">
           <div class="col-2of3 more-below-small">
             <h2>Reviews</h2>
-              <article class="more-below">
-                <h3>Peter Tang</h3>
-                <p>
-                  <span class="review-purchase-date">December 14, 2015</span><br/>
-                  <span class="review-rating">5 out of 5</span>
-                </p>
-                <p>Love it! Been getting compliments from my co-workers all week :)</p>
-              </article>
-              <article class="more-below">
-                <h3>Wesley Chan</h3>
-                <p>
-                  <span class="review-purchase-date">December 12, 2015</span><br/>
-                  <span class="review-rating">4 out of 5</span>
-                </p>
-                <p>Loving the shirt quality. Not my favourite design (I really liked the balloon from October) but it's still pretty great!</p>
-              </article>
-              <article>
-                <h3>jimmychu</h3>
-                <p>
-                  <span class="review-purchase-date">December 9, 2015</span><br/>
-                  <span class="review-rating">3 out of 5</span>
-                </p>
-                <p>my first shirt from fit to a tee. looks nice but the small didnt fit me properly. they should have a size guide or something like that</p>
-              </article>
+            <article class="more-below">
+              <h3>Peter Tang</h3>
+              <p>
+                <span class="review-purchase-date">October 14, 2015</span><br/>
+                <span class="review-rating">5 out of 5</span>
+              </p>
+              <p>Love it! Been getting compliments from my co-workers all week :)</p>
+            </article>
+            <article class="more-below">
+              <h3>Wesley Chan</h3>
+              <p>
+                <span class="review-purchase-date">October 12, 2015</span><br/>
+                <span class="review-rating">4 out of 5</span>
+              </p>
+              <p>Loving the shirt quality. Not my favourite design (I really liked the balloon from October) but it's still pretty great!</p>
+            </article>
+            <article>
+              <h3>jimmychu</h3>
+              <p>
+                <span class="review-purchase-date">October 9, 2015</span><br/>
+                <span class="review-rating">3 out of 5</span>
+              </p>
+              <p>my first shirt from fit to a tee. looks nice but the small didnt fit me properly. they should have a size guide or something like that</p>
+            </article>
           </div>
           <div class="col-1of3">
             <h2>Leave A Review</h2>
