--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
       <div class="homepage-content">
         <h1>Vancouver-designed. One-of-a-kind.</h1>
 
-        <p>Discover unique, sustainable, and beautifully-designed t-shirts from Vancouver, British Columbia.</p>
+        <p>Discover unique, sustainable, and beautifully-designed t-shirts from Vancouver, British Columbia. Only available for one month!</p>
 
         <a class="button submit" href="about.html">More About Us</a>
       </div>
@@ -78,8 +78,8 @@
               <img src="img/tshirt_box.png" alt="T-shirt with a gift box on the front. ">
               <figcaption class="product-info">
                 <p class="product-name">Gift Box T-Shirt</p>
-                <p class="product-date">October 2015</p>
-                <p class="product-sold">Sold: 12 </p>
+                <p class="product-date">September 2015</p>
+                <p class="product-sold">Sold: 22 </p>
               </figcaption>
             </div></a>
           </figure>
@@ -87,9 +87,9 @@
             <div class="product-listing">
               <img src="img/tshirt_balloon.png" alt="T-shirt with a ballon on the front. ">
               <figcaption class="product-info">
-                <p class="product-name">Ballon T-Shirt</p>
-                <p class="product-date">October 2015</p>
-                <p class="product-sold">Sold: 12 </p>
+                <p class="product-name">Balloon T-Shirt</p>
+                <p class="product-date">September 2015</p>
+                <p class="product-sold">Sold: 24 </p>
               </figcaption>
             </div></a>
           </figure>
@@ -98,8 +98,8 @@
               <img src="img/tshirt_cake.png" alt="T-shirt with a cake on the front.">
               <figcaption class="product-info">
                 <p class="product-name">Cake T-Shirt</p>
-                <p class="product-date">October 2015</p>
-                <p class="product-sold">Sold: 12 </p>
+                <p class="product-date">August 2015</p>
+                <p class="product-sold">Sold: 36 </p>
               </figcaption>
             </div></a>
           </figure>
