--- a/past-item.html
+++ b/past-item.html
@@ -32,9 +32,9 @@
         <div class="product-view more-below">
           <img src="img/tshirt_box.png" alt="T-shirt with a gift box on the front." class="img-product-view">
           <h1>Gift Box T-Shirt</h1>
-          <p class="product-date">Style Ended: December 2015</p>
+          <p class="product-date">This style ran until September 30, 2015.</p>
           <p class="product-sold">Shirts Sold: 12</p>
-          <p>This gift box t-shirt is made from a 100% bamboo tri-blend, and available in red, black, and white. It's a unisex fit and can be machine-washed and dried without any trouble.</p>
+          <p>This gift box t-shirt is made from a 100% bamboo tri-blend, and available in black, yellow, and white. It's a unisex fit and can be machine-washed and dried without any trouble.</p>
           
         </div>
       </section>
@@ -43,7 +43,38 @@
         <div class="grid-container">
           <div class="col-2of3 more-below-small">
             <h2>Reviews</h2>
-            <div class="img-filler"></div>
+            <article class="more-below">
+              <h3>Kenny</h3>
+              <p>
+                <span class="review-purchase-date">September 17, 2015</span><br/>
+                <span class="review-rating">3 out of 5</span>
+              </p>
+              <p>The medium doesn't fit great, a bit baggy overall. Would like a more fitted cut.</p>
+            </article>
+            <article class="more-below">
+              <h3>Christie Wong</h3>
+              <p>
+                <span class="review-purchase-date">September 12, 2015</span><br/>
+                <span class="review-rating">1 out of 5</span>
+              </p>
+              <p>Took almost 3 weeks to arrive, and customer service was terrible. Great shirt, but don't think I'll be doing business with them again.</p>
+            </article>
+            <article class="more-below">
+              <h3>Peter Tang</h3>
+              <p>
+                <span class="review-purchase-date">September 3, 2015</span><br/>
+                <span class="review-rating">5 out of 5</span>
+              </p>
+              <p>Been buying from Fit To A Tee for over a year, and they still haven't let me down. Another great style!</p>
+            </article>
+            <article>
+              <h3>j.goh</h3>
+              <p>
+                <span class="review-purchase-date">September 2, 2015</span><br/>
+                <span class="review-rating">5 out of 5</span>
+              </p>
+              <p>Awesome! :D</p>
+            </article>
           </div>
           <div class="col-1of3">
             <h2>Leave A Review</h2>
