--- a/past-styles.html
+++ b/past-styles.html
@@ -27,6 +27,7 @@
       <!-- NAVIGATION // -->
 
       <h1>Past Styles</h1>
+      <p>These are styles that ran over the past three months. You can't buy them anymore, but you can check them out and see how you like our work!</p>
 
        <!-- // PAST-STYLES // -->
 
@@ -38,8 +39,8 @@
               <img src="img/tshirt_box.png" alt="T-shirt with a gift box on the front. ">
               <figcaption class="product-info">
                 <p class="product-name">Gift Box T-Shirt</p>
-                <p class="product-date">October 2015</p>
-                <p class="product-sold">Sold: 12 </p>
+                <p class="product-date">September 2015</p>
+                <p class="product-sold">Sold: 22 </p>
               </figcaption>
             </div></a>
           </figure>
@@ -47,9 +48,9 @@
             <div class="product-listing">
               <img src="img/tshirt_balloon.png" alt="T-shirt with a ballon on the front. ">
               <figcaption class="product-info">
-                <p class="product-name">Ballon T-Shirt</p>
-                <p class="product-date">October 2015</p>
-                <p class="product-sold">Sold: 12 </p>
+                <p class="product-name">Balloon T-Shirt</p>
+                <p class="product-date">September 2015</p>
+                <p class="product-sold">Sold: 24 </p>
               </figcaption>
             </div></a>
           </figure>
@@ -58,8 +59,8 @@
               <img src="img/tshirt_cake.png" alt="T-shirt with a cake on the front.">
               <figcaption class="product-info">
                 <p class="product-name">Cake T-Shirt</p>
-                <p class="product-date">October 2015</p>
-                <p class="product-sold">Sold: 12 </p>
+                <p class="product-date">August 2015</p>
+                <p class="product-sold">Sold: 36 </p>
               </figcaption>
             </div></a>
           </figure>
@@ -70,8 +71,8 @@
               <img src="img/tshirt_xmastree.png" alt="T-shirt with Xmas trees on the front.">
               <figcaption class="product-info">
                 <p class="product-name">Xmas Trees T-Shirt</p>
-                <p class="product-date">October 2015</p>
-                <p class="product-sold">Sold: 12 </p>
+                <p class="product-date">August 2015</p>
+                <p class="product-sold">Sold: 19 </p>
               </figcaption>
             </div></a>
           </figure>
@@ -80,8 +81,8 @@
               <img src="img/tshirt_cupcake.png" alt="T-shirt with a cupcake on the front.">
               <figcaption class="product-info">
                 <p class="product-name">Cupcake T-Shirt</p>
-                <p class="product-date">October 2015</p>
-                <p class="product-sold">Sold: 12 </p>
+                <p class="product-date">July 2015</p>
+                <p class="product-sold">Sold: 17 </p>
               </figcaption>
             </div></a>
           </figure>
@@ -90,8 +91,8 @@
               <img src="img/tshirt_paper.png" alt="T-shirt with two falling children on the front.">
               <figcaption class="product-info">
                 <p class="product-name">Celebrate T-Shirt</p>
-                <p class="product-date">October 2015</p>
-                <p class="product-sold">Sold: 12 </p>
+                <p class="product-date">July 2015</p>
+                <p class="product-sold">Sold: 24 </p>
               </figcaption>
             </div></a>
           </figure>
